[metadata]
name = lisa-web
summary = Web interface for L.I.S.A
description-file =
    README.rst
author = Julien Syx
author-email = julien@lisa-project.net
home-page = http://www.lisa-project.net
classifier =
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Development Status :: 4 - Beta
    Operating System :: POSIX :: Linux
    Topic :: Internet :: WWW/HTTP
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    lisa-web

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = lisa-web/locale
domain = lisa-web

[update_catalog]
domain = lisa-web
output_dir = lisa-web/locale
input_file = lisa-web/locale/sandbox.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = lisa-web/locale/lisa-web.pot
